# DataRecoveryTool

./: .gitignore  CMakeLists.txt  PROJECT_README.md  README.md  build.bat
docs/: BUILD_INSTRUCTIONS.md  PROJECT_SUMMARY.md  TECHNICAL_DOCUMENTATION.md  USER_GUIDE.md  architecture.md
include/: DiskEnumerator.h  NtfsParser.h  NtfsStructures.h  RawDiskReader.h  RecoveryEngine.h  RecoveryScanner.h
src/: DiskEnumerator.cpp  NtfsParser.cpp  NtfsStructures.cpp  RawDiskReader.cpp  RecoveryEngine.cpp  RecoveryScanner.cpp  main.cpp
tests/: README.md
